# Crouzet_Motor

./: README.md
devel/: .catkin  setup.sh
devel/include/motor_node/: VelCommunication.h  VelCommunicationRequest.h  VelCommunicationResponse.h
devel/lib/motor_node/: motor_node_node
devel/lib/pkgconfig/: motor_node.pc
devel/lib/python3/dist-packages/motor_node/srv/: _VelCommunication.py  __init__.py
devel/share/common-lisp/ros/motor_node/srv/: VelCommunication.lisp  _package.lisp  _package_VelCommunication.lisp  motor_node-srv.asd
devel/share/gennodejs/ros/motor_node/srv/: VelCommunication.js  _index.js
devel/share/motor_node/cmake/: motor_node-msg-extras.cmake  motor_node-msg-paths.cmake  motor_nodeConfig.cmake
devel/share/motor_vel/cmake/: motor_vel-msg-paths.cmake
devel/share/roseus/ros/motor_node/: manifest.l
devel/share/roseus/ros/motor_node/srv/: VelCommunication.l
src/motor_node/: CMakeLists.txt
src/motor_node/include/motor_node/: motor_node.hpp
src/motor_node/src/: main.cpp
src/motor_node/src/lib/: motor_node_01.cpp
